--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 
 
-.main {
+#main {
 	width: 300px;
 	height: 400px; 
 	font-family: 'Open Sans Condensed', sans-serif;
@@ -8,7 +8,7 @@
 }
 
 
-button {
+.button {
 	border: solid 1px white;
 	background-color: #21F383;
 	font-size: 1.7em;
@@ -17,6 +17,11 @@ button {
 	height: 75px;
 	font-weight: 200;
 	cursor: pointer;
+	outline:0;
+}
+
+.button:hover {
+	color: #064222;
 
 }
 
